# Doable

./: .dockerignore  .env.example  .env.integrations.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEV_SERVER_FIX_DOCS.md  Dockerfile  QUICKSTART.md  README-DEPLOY.md  README.md  SECURITY.md  app.json  baremetal-audit-r13.md  baremetal-fix-r12.md  check-migrations.mjs  cleanup-temp.ps1  clear-migrations.mjs  collab-issue-research.md  copilot-concurrency-plan.md  deploy-fix.py  dev-server-inline-fix.sh  dev.ps1  diagnose-dev.sh  do-commit.cmd  docker-compose.secure.yml  docker-compose.yml  docker-fix-r12.md  emergency-recovery.sh  fix-dev-server.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.json  progress.txt  push-changes.py  r12-longprompt-fix-notes.md  railway.json  (+11 more)
.claude/: settings.local.json
.devcontainer/: post-create.sh
.do/: app.yaml
PlatformTemplatesPRD/: 00-baseline.md  01-coolify.md  02-digitalocean.md  03-railway.md  04-render.md  05-fly.md  06-kubernetes.md  07-app-json.md  08-codespaces.md  09-release-pipeline.md  10-repo-cleanup.md  _INDEX.md
SandboxAgnosticSandboxingPRD/: 00-overview.md  01-threat-model.md  02-sandboxing-layers.md  03-backend-landscape.md  04-psroot-assessment.md  05-current-state-dovault.md  06-architecture-sandbox-agnostic.md  07-jail-profiles.md  08-syscall-and-mac-filtering.md  09-network-isolation.md  10-config-management.md  11-migration-path.md  12-testing-strategy.md  14-references.md  (+2 more)
tools/admin-cli/: Cargo.toml
tools/admin-cli/src/: app.rs  db.rs  main.rs  ui.rs
(+2780 files in other folders)
