[package]
name = "doable-admin"
version = "0.1.0"
edition = "2021"
description = "Doable workspace admin TUI — manage members, roles, and AI settings"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
inquire = "0.7"
tabled = "0.17"
colored = "2"
dotenvy = "0.15"
