[package]
name = "doable-admin"
version = "0.2.0"
edition = "2021"
description = "Doable admin TUI — manage platform users, flags, members, and AI settings"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"
